--- a/style.css
+++ b/style.css
@@ -213,13 +213,25 @@ body {
     opacity: 1;
 }
 
-.countdown {
+/* .countdown {
     margin-top: 40px;
     font-family: 'Poppins', sans-serif;
     font-size: 1.2em;
     color: #FFD700;
     text-shadow: 0 0 5px rgba(255, 215, 0, 0.6);
     transition: opacity 0.5s ease-out;
+} */
+
+.countdown {
+    margin-top: 20px; 
+    margin-bottom: 10px; 
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.2em;
+    color: #FFD700;
+    text-shadow: 0 0 5px rgba(255, 215, 0, 0.6);
+    transition: opacity 0.5s ease-out;
+    position: relative; 
+    z-index: 15; 
 }
 
 #timer {
