--- a/style.css
+++ b/style.css
@@ -222,7 +222,7 @@ body {
     transition: opacity 0.5s ease-out;
 } */
 
-.countdown {
+/* .countdown {
     margin-top: -5px; 
     margin-bottom: 17px; 
     font-family: 'Poppins', sans-serif;
@@ -232,7 +232,20 @@ body {
     transition: opacity 0.5s ease-out;
     position: relative; 
     z-index: 15; 
+} */
+
+.countdown {
+    margin-top: -20px; /* Pulls it upward */
+    margin-bottom: 17px;
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.2em;
+    color: #FFD700;
+    text-shadow: 0 0 5px rgba(255, 215, 0, 0.6);
+    transition: opacity 0.5s ease-out;
+    position: relative;
+    z-index: 15;
 }
+
 
 #timer {
     font-size: 1.8em;
